# cura

./: README.md
backend/: .env.example  INTEGRATION_GUIDE.md  LOCALNET_SETUP.md  QUICK_START.sh  README.md  README_API.md  README_EVENT_SYSTEM.md  README_TESTS.md  SETUP_GUIDE.md  package-lock.json  package.json  result.txt  tsconfig.json  vitest.config.ts
frontend/: .env.example  API GUIDE.md  API_INTEGRATION_SUMMARY.md  App.tsx  FEATURES_CHECKLIST.md  IMPLEMENTATION_NOTES.md  README.md  env.example  fix-pages.sh  fix-types.sh  gitignore.txt  index.css  index.html  package-lock.json  package.json  pnpm-lock.yaml  replit.md  tailwind.config.js
program/: Anchor.toml  Cargo.toml  README.md  download.sh  fund-devnet-accounts.sh  package-lock.json  package.json  (+1 more)
program/programs/discount-platform/: Cargo.toml
program/programs/discount-platform/src/: errors.rs  events.rs  lib.rs
program/programs/discount-platform/src/instructions/: add_comment.rs  auctions.rs  auto_award_badge.rs  buy_listing.rs  claim_rewards.rs  create_promotion.rs  group_deals.rs  initialize.rs  initialize_staking.rs  like_comment.rs  list_for_sale.rs  mint_badge.rs  mint_coupon.rs  mod.rs  rate_promotion.rs  redeem_coupon.rs  redemption_tickets.rs  register_merchant.rs  stake_coupon.rs  transfer_coupon.rs  update_external_deal.rs
program/programs/discount-platform/src/state/: auctions.rs  badge.rs  comment.rs  coupon.rs  external_deal.rs  group_deal.rs  listing.rs  location.rs  marketplace.rs  merchant.rs  mod.rs  promotion.rs  rating.rs  redemption_ticket.rs  staking.rs  user_stats.rs
(+203 files in other folders)
