[package]
name = "discount-platform"
version = "1.0.0"
description = "Web3-powered discount marketplace with NFT coupons"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "discount_platform"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = "0.31.0"
mpl-token-metadata = "5.1.1"
proc-macro2 = "1.0.86"
anchor-syn = "0.31.0" 
zeroize = "1.8.2" 




